fix image vertical column alignment

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -30,6 +30,7 @@ header h2 {
     box-shadow: 4px 4px 4px rgba(0,0,0,0.1);
     border-radius: 8px;
     border: 0px;
+    vertical-align: top;
 }
 #main_content em img {
     display: block;
